force-app/main/default/objects/StnryAssetEnrgyUse/StnryAssetEnrgyUse.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>