force-app/main/default/objects/StnryAssetEnrgyUse/fields/Accural_Data__c.field-meta.xml
<CustomField>
    <fullName>Accural_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AJ: Created for NZC Implementation (), This field is created to Check Whether the data is Actual or Estimated:</description>
    <label>Accural Data</label>
    <type>Checkbox</type>
</CustomField>