force-app/main/default/objects/StnryAssetEnrgyUse/fields/Accural_Estimated_Data__c.field-meta.xml
<CustomField>
    <fullName>Accural_Estimated_Data__c</fullName>
    <description>AJ: Created for NZC Implementation (), This field is created to capture Accural / Estimated Data:</description>
    <formula>IF(Accural_Data__c == true  ||  IsSystemGeneratedRecord == true,  FuelConsumption , 0)</formula>
    <inlineHelpText>This is auto Generated field.</inlineHelpText>
    <label>Accural / Estimated Data</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>