force-app/main/default/objects/StnryAssetEnrgyUse/fields/Actual_Data__c.field-meta.xml
<CustomField>
    <fullName>Actual_Data__c</fullName>
    <description>AJ: Created for NZC Implementation (), This field is created to capture Actual Data:</description>
    <formula>IF(Accural_Data__c == false  &amp;&amp;  IsSystemGeneratedRecord == false, FuelConsumption , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is auto Generated field.</inlineHelpText>
    <label>Actual Data</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>