force-app/main/default/objects/StnryAssetEnrgyUse/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <description>HA: Created for NZC Implementation, purpose: for multi approver change request this field has been created to populate business region from from its parent site information record</description>
    <formula>TEXT(StnryAssetEnvrSrc.BusinessRegion)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Region</label>
    <type>Text</type>
</CustomField>