force-app/main/default/objects/StnryAssetEnrgyUse/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>[AK: Created this field as part of UC003_US02 to capture reopening comments]
&quot;</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>