force-app/main/default/objects/StnryAssetEnrgyUse/fields/Data_Approver__c.field-meta.xml
<CustomField>
    <fullName>Data_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VB, Venkat: Created for NZC Implementation UC004_US01
Purpose: Data approver user lookup field created for approval process</description>
    <label>Data Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stationary_Asset_Energy_Use1</relationshipName>
    <type>Lookup</type>
</CustomField>