force-app/main/default/objects/StnryAssetEnrgyUse/fields/Data_Validator__c.field-meta.xml
<CustomField>
    <fullName>Data_Validator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VB, Venkat: Created for NZC Implementation UC004_US01,
Purpose: Data validator user lookup field created for approval process</description>
    <label>Data Validator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stationary_Asset_Energy_Use</relationshipName>
    <type>Lookup</type>
</CustomField>