force-app/main/default/objects/StnryAssetEnrgyUse/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Venkat: Created for NZC Implementation UC004_US08,
Purpose: to capture the due date of the reopened energy record</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>