force-app/main/default/objects/StnryAssetEnrgyUse/fields/Energy_Use_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Energy_Use_Duration_Days__c</fullName>
    <formula>EndDate - StartDate +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Use Duration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>