force-app/main/default/objects/StnryAssetEnrgyUse/fields/Extracted_Year__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Year__c</fullName>
    <description>HA: This will extract the year from start and end date based on a condition</description>
    <formula>IF(
   AND(
       MONTH(StartDate) = 12,
       DAY(StartDate) &gt;= 16
   ),
   YEAR(EndDate),
   YEAR(StartDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extracted Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>