force-app/main/default/objects/StnryAssetEnrgyUse/fields/Fuel_Consumption_Actual__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Consumption_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Fuel Consumption Value:</description>
    <label>Fuel Consumption Actual</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>