force-app/main/default/objects/StnryAssetEnrgyUse/fields/Fuel_Consumption_Unit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Consumption_Unit_Actual__c</fullName>
    <description>AJ: Created for NZC Implementation, This field is created to store Actual Fuel Consumption value:</description>
    <label>Fuel Consumption Unit Actual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>