force-app/main/default/objects/StnryAssetEnrgyUse/fields/I_have_reviewed_all_fields_and_data__c.field-meta.xml
<CustomField>
    <fullName>I_have_reviewed_all_fields_and_data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HA: Created for NZC Implementation, UC003_US04 Purpose: This field is to check by the user when they have created or edited any data, declaring that they have filled all the data and data has been checked before saving.</description>
    <label>I confirm the above</label>
    <type>Checkbox</type>
</CustomField>