force-app/main/default/objects/StnryAssetEnrgyUse/fields/Non_R22_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Non_R22_Emissions__c</fullName>
    <description>Susnato: Created formula field for the reporting purpose of Non R22 emissions</description>
    <formula>IF(CONTAINS(RefrigerantEmssnFctr.Name, &apos;R22&apos;), 0, Scope1EmissionsInTco2e)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non R22 Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>