force-app/main/default/objects/StnryAssetEnrgyUse/fields/NZC_Created_by_Automation__c.field-meta.xml
<CustomField>
    <fullName>NZC_Created_by_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Automation</label>
    <type>Checkbox</type>
</CustomField>