force-app/main/default/objects/StnryAssetEnrgyUse/fields/NZC_Declaration_Message_On_Energy_Use__c.field-meta.xml
<CustomField>
    <fullName>NZC_Declaration_Message_On_Energy_Use__c</fullName>
    <description>HA: Created for NZC Implementation, UC003_US04. Purpose: This field created to display the Declaration Message above the Declaration Checkbox on the layout.</description>
    <formula>$Label.NZC_Declaration_Message</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declaration Message</label>
    <type>Text</type>
</CustomField>