force-app/main/default/objects/StnryAssetEnrgyUse/fields/NZC_Potential_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>NZC_Potential_Duplicate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Harshvardhan: This self lookup field is created to link the existing energy use record to the newly created energy use record if the certain criteria meets.</description>
    <label>Potential Duplicate</label>
    <referenceTo>StnryAssetEnrgyUse</referenceTo>
    <relationshipLabel>Stationary Asset Energy Use</relationshipLabel>
    <relationshipName>Stationary_Asset_Energy_Use</relationshipName>
    <type>Lookup</type>
</CustomField>