force-app/main/default/objects/StnryAssetEnrgyUse/fields/NZC_Renewable_Energy_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>NZC_Renewable_Energy_Type_Override__c</fullName>
    <description>CJ: Created for NZC Implementation, &lt;Purpose&gt; : To Identify the record with Custom renewable energy type override Green Tariff</description>
    <inlineHelpText>This field represent the Renewable type as Green Tariff considering Solar as renewable type for calculations.</inlineHelpText>
    <label>NZC Renewable Energy Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Tariff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>