force-app/main/default/objects/StnryAssetEnrgyUse/fields/R22_Emissions__c.field-meta.xml
<CustomField>
    <fullName>R22_Emissions__c</fullName>
    <description>Susnato: Created formula field for the reporting purpose of R22 emissions</description>
    <formula>IF(CONTAINS(RefrigerantEmssnFctr.Name, &apos;R22&apos;)  , Scope1EmissionsInTco2e, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R22 Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>