force-app/main/default/objects/StnryAssetEnrgyUse/fields/Refrigerant_Type__c.field-meta.xml
<CustomField>
    <fullName>Refrigerant_Type__c</fullName>
    <description>Ajay [19-02-2026]: Created on StnryAssetEnrgyUse to view the Refrigerant Emissions Factor type</description>
    <formula>LEFT(
    RefrigerantEmssnFctr.Name,
    FIND(&quot; - &quot;, RefrigerantEmssnFctr.Name) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refrigerant Type</label>
    <type>Text</type>
</CustomField>