force-app/main/default/objects/StnryAssetEnrgyUse/fields/SiteInfo_Name__c.field-meta.xml
<CustomField>
    <fullName>SiteInfo_Name__c</fullName>
    <description>SB: Implemented for NZC: Created this custom formula field to include Site Information name to be referenced in the Rejection Email Template.</description>
    <formula>StnryAssetEnvrSrc.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteInfo Name</label>
    <type>Text</type>
</CustomField>