force-app/main/default/objects/StnryAssetEnrgyUse/fields/X18_Digit_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Record_ID__c</fullName>
    <description>CJ: Created for NZC Implementation, To Populate 18 Digit Record ID in Report</description>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit Record ID</label>
    <type>Text</type>
</CustomField>