force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Approved_record_should_not_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Approved_record_should_not_be_edited</fullName>
    <active>true</active>
    <description>This validation will stop user form editing the records when the record Status is Approved.</description>
    <errorConditionFormula>AND( 
 ISPICKVAL( $User.User_Type__c ,&quot;Data Processor&quot;) || ISPICKVAL( $User.User_Type__c ,&quot;Data Validator&quot;) || ISPICKVAL( $User.User_Type__c ,&quot;Data Approver&quot;), 
ISPICKVAL(PRIORVALUE( Status__c ), &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot edit the records once it is Approved by  Data Approver.</errorMessage>
</ValidationRule>