force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_comments_mandatory_for_user_ESG_DM.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_comments_mandatory_for_user_ESG_DM</fullName>
    <active>true</active>
    <description>When Status is changed to Reopened by ESG Team or Data Modeller Team , the comments field should be mandatory</description>
    <errorConditionFormula>OR(
	AND(
		IsSystemGeneratedRecord = TRUE,
		ISPICKVAL(Status__c, &quot;Re-Opened&quot;),
		ISPICKVAL($User.User_Type__c ,&quot;ESG Team&quot;),
		OR (ISBLANK(Comments__c), (ISBLANK(Due_Date__c) || (Due_Date__c &lt; TODAY() )))
	)
,

	AND(
		IsSystemGeneratedRecord = FALSE,
		ISPICKVAL(Status__c, &quot;Re-Opened&quot;),
		OR(
			ISPICKVAL($User.User_Type__c ,&quot;ESG Team&quot;),
			ISPICKVAL($User.User_Type__c ,&quot;Data Modeller&quot;)
		),
		OR (ISBLANK(Comments__c), (ISBLANK(Due_Date__c) || (Due_Date__c &lt; TODAY() )))
	)

)</errorConditionFormula>
    <errorMessage>Please provide the Comments and Due Date (Should not be past date) if you are changing Status to Reopened .</errorMessage>
</ValidationRule>