force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Energy_Use_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Energy_Use_Creation</fullName>
    <active>true</active>
    <description>Venkat: Created as part of user story &apos;UC017_US04&apos;
Purpose: To restrict the user to create an Energy Use if corresponding site information is inactive or not approved.</description>
    <errorConditionFormula>OR(
AND(
    StnryAssetEnvrSrc.Active__c  =  TRUE ,   
     NOT(ISPICKVAL( StnryAssetEnvrSrc.Status__c, &apos;Approved&apos;))
),
AND(
    StnryAssetEnvrSrc.Active__c &lt;&gt; TRUE ,   
     NOT(ISPICKVAL( StnryAssetEnvrSrc.Status__c, &apos;Approved&apos;))
)
)</errorConditionFormula>
    <errorMessage>The Energy Use record will be created if the corresponding Site Information Record is Active and its Status is Approved.</errorMessage>
</ValidationRule>