force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_ESG_and_DM_users_status_field.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_ESG_and_DM_users_status_field</fullName>
    <active>true</active>
    <description>The Data Modeller Team and ESG Team should only able to change the status to Reopen</description>
    <errorConditionFormula>OR(
	AND(
		ISCHANGED(Status__c),
		IsSystemGeneratedRecord = TRUE,
		ISPICKVAL($User.User_Type__c ,&quot;ESG Team&quot;),
		NOT(ISPICKVAL(Status__c, &quot;Re-Opened&quot;))
	)
,
		
	AND(
		ISCHANGED(Status__c),
		IsSystemGeneratedRecord = FALSE,
		OR(
			ISPICKVAL($User.User_Type__c ,&quot;ESG Team&quot;),
			ISPICKVAL($User.User_Type__c ,&quot;Data Modeller&quot;)
		),
		NOT(ISPICKVAL(Status__c, &quot;Re-Opened&quot;))
	)	
)</errorConditionFormula>
    <errorMessage>You can change the status to Re-Open only</errorMessage>
</ValidationRule>