force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Fuel_Type_Should_Not_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Fuel_Type_Should_Not_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT(ISNEW()),
NOT(ISBLANK(PRIORVALUE( FuelType ))),
ISCHANGED(FuelType)
)</errorConditionFormula>
    <errorMessage>Fuel Type value cannot be changed as value already exists.</errorMessage>
</ValidationRule>