force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Restrict_DM_To_Edit_Sys_Gen_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_DM_To_Edit_Sys_Gen_Records</fullName>
    <active>true</active>
    <description>Venkat: Created as part of NZC Phase 3 Implementation.
Purpose: Restrict the Data Modeller to edit the Approved System Generated Energy Use Records.</description>
    <errorConditionFormula>AND(
ISPICKVAL( $User.User_Type__c ,&quot;Data Modeller&quot;),
IsSystemGeneratedRecord = TRUE,
ISPICKVAL(PRIORVALUE( Status__c ), &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>You Cannot Edit the record once it is approved.</errorMessage>
</ValidationRule>