force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Restrict_DM_to_Update_SysGen_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_DM_to_Update_SysGen_Records</fullName>
    <active>true</active>
    <description>Venkat: Created as part of NZC Phase 3 Implementation
Purpose: To restrict the Data Modeller to update the status of an system generated energy use records.</description>
    <errorConditionFormula>AND(
IsSystemGeneratedRecord = TRUE,
ISPICKVAL($User.User_Type__c ,&quot;Data Modeller&quot;),
ISCHANGED(Status__c),
NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Created&quot;))
)</errorConditionFormula>
    <errorMessage>You cannot update the Status Field.</errorMessage>
</ValidationRule>