force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Restrict_field_access_for_ESG_DM.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_field_access_for_ESG_DM</fullName>
    <active>true</active>
    <description>The ESG Team and Data Modeller Team should only be able to edit Status and Comments.</description>
    <errorConditionFormula>AND(IsSystemGeneratedRecord = FALSE,
				OR(
								ISPICKVAL($User.User_Type__c ,&quot;ESG Team&quot;),
								ISPICKVAL($User.User_Type__c ,&quot;Data Modeller&quot;)
				),
				OR(ISCHANGED(Name),ISCHANGED(StnryAssetEnvrSrcId),ISCHANGED(FuelType),ISCHANGED(FuelConsumptionUnit),ISCHANGED(Accural_Data__c),
					ISCHANGED(StnryAssetCrbnFtprntId),ISCHANGED(NZC_Month__c),ISCHANGED(I_have_reviewed_all_fields_and_data__c),ISCHANGED(CarbonFootprintReportDate),ISCHANGED(StartDate),ISCHANGED(EndDate),ISCHANGED(SupplierId),ISCHANGED(FuelConsumption))        

)</errorConditionFormula>
    <errorMessage>Record cannot be edited other than Status and Comments.</errorMessage>
</ValidationRule>