force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Restrict_User_Manual_Record_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_User_Manual_Record_Creation</fullName>
    <active>true</active>
    <description>CJ: Created for NZC Implementation.
Purpose: Restrict to create record for ESG and Data Modeller user when record is not system generated.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL($User.User_Type__c, &quot;ESG Team&quot;),
        ISPICKVAL($User.User_Type__c, &quot;Data Modeller&quot;)
    ),
    AND( ISNEW(), NOT(IsSystemGeneratedRecord))
        
    )</errorConditionFormula>
    <errorMessage>You are not allowed to create energy use record manually, Please contact NZC administrator for more information.</errorMessage>
</ValidationRule>