force-app/main/default/objects/StnryAssetEnrgyUse/validationRules/NZC_Validate_Before_Saving_Energy_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Validate_Before_Saving_Energy_Record</fullName>
    <active>true</active>
    <description>HA: Created for NZC Implementation  - UC003_US04, Purpose: This validation ensure that user has filled all the important details in the necessary fields and declared about the same</description>
    <errorConditionFormula>AND(
ISPICKVAL( $User.User_Type__c ,&quot;Data Processor&quot;) || 
ISPICKVAL( $User.User_Type__c ,&quot;System Admin&quot;),
 I_have_reviewed_all_fields_and_data__c  = FALSE
)</errorConditionFormula>
    <errorDisplayField>I_have_reviewed_all_fields_and_data__c</errorDisplayField>
    <errorMessage>Please check the box stating that you have filled all the necessary data and reviewed the data.</errorMessage>
</ValidationRule>