force-app/main/default/objects/StnryAssetEnrgyUse/listViews/All_StnryAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>All_StnryAssetEnrgyUse</fullName>
    <columns>Name</columns>
    <columns>FuelType</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Scope1EmissionsInTco2e</columns>
    <columns>Status__c</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2026</value>
    </filters>
    <label>All Stationary Asset Energy Use</label>
</ListView>