force-app/main/default/objects/StnryAssetEnrgyUse/listViews/AMER_Data_Approver_StnryAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>AMER_Data_Approver_StnryAssetEnrgyUse</fullName>
    <filterScope>Queue</filterScope>
    <label>AMER Data Approver</label>
    <queue>AMER_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>