force-app/main/default/objects/StnryAssetEnrgyUse/listViews/APAC_Phillipines_Data_Approver_StnryAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>APAC_Phillipines_Data_Approver_StnryAssetEnrgyUse</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Phillipines Data Approver</label>
    <queue>APAC_Phillipines_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>