force-app/main/default/objects/StnryAssetEnrgyUse/listViews/INDIA_APAC_EMEA_Data_Approver_StnryAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>INDIA_APAC_EMEA_Data_Approver_StnryAssetEnrgyUse</fullName>
    <filterScope>Queue</filterScope>
    <label>INDIA, APAC, EMEA Data Approver</label>
    <queue>INDIA_APAC_EMEA_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>