force-app/main/default/objects/StnryAssetEnrgyUse/listViews/LATAM_Data_Approver_StnryAssetEnrgyUse.listView-meta.xml
<ListView>
    <fullName>LATAM_Data_Approver_StnryAssetEnrgyUse</fullName>
    <filterScope>Queue</filterScope>
    <label>LATAM Data Approver</label>
    <queue>LATAM_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>